<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aboutUsText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutUsText"
        android:background="@drawable/about_us_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/about_us_text_1"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/aboutUsText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutUsText1"
        android:background="@drawable/about_us_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/about_us_text_2"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />
</androidx.constraintlayout.widget.ConstraintLayout>
